[project]
name = "pkg-logical"
version = "0.1.0"
description = "Logical operational specifiers and markers"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "packaging>=22",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["pkg_logical"]

[tool.pdm.dev-dependencies]
dev = [
    "poetry-core>=1.8.1",
    "pytest>=7.4.3",
]
